--- a/css/google/styles.css
+++ b/css/google/styles.css
@@ -25,6 +25,11 @@
     margin-right: auto;
 }
 
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .btn {
     margin-top: 30px;
     border: none;
@@ -35,4 +40,6 @@
     padding-right: 16px;
     font-size: 14px;
     border-radius: 4px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
