--- a/business-card/styles.css
+++ b/business-card/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 20px;
+    color: #2b2839;
 }
 
 .avatar {
@@ -13,6 +14,8 @@ body {
     width: 400px;
     margin-left: auto;
     margin-right: auto;
+    border-bottom: 6px solid #d8cefe;
+    background: #ddebf8;
 }
 
 .dotted-border {
