--- a/business-card/styles.css
+++ b/business-card/styles.css
@@ -13,8 +13,7 @@ body {
     display: flex;
     justify-content: space-around;
     width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     border-bottom: 6px solid #d8cefe;
     background: #ddebf8;
 }
