--- a/space-exploration/styles.css
+++ b/space-exploration/styles.css
@@ -6,7 +6,7 @@ Challenge:
 */
 
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Orbitron", sans-serif;
     color: white;
     background-image: url("image/universe.png");
     background-size: cover;
@@ -18,4 +18,5 @@ body {
     background: white;
     padding: 6px 12px;
     border: none;
+    font-family: inherit;
 }
