--- a/space-exploration/styles.css
+++ b/space-exploration/styles.css
@@ -1,14 +1,12 @@
-/*
-Challenge:
-1. Center the text and button
-2. Style the button according to the design.
-   Use a class to select the button.
-*/
+@font-face {
+    font-family: Corleone;
+    src: url("godfather.ttf");
+}
 
 body {
     font-family: "Orbitron", sans-serif;
-    color: white;
-    background-image: url("image/universe.png");
+    color: #82a5ca;
+    background-image: url("image/galaxy.webp");
     background-size: cover;
     text-align: center;
 }
@@ -19,4 +17,14 @@ body {
     padding: 6px 12px;
     border: none;
     font-family: inherit;
+    font-weight: 800;
+}
+
+.exploration {
+    border-bottom: 4px solid white;
+    
+}
+
+#main-logo {
+    width: 100px;
 }
